--- a/make/photon/redis/Dockerfile.base
+++ b/make/photon/redis/Dockerfile.base
@@ -5,5 +5,4 @@ RUN tdnf install -y shadow >> /dev/null \
     && useradd -u 999 -g 999 -c "Redis Database Server" -d /var/lib/redis -s /sbin/nologin -m redis
 RUN tdnf install -y redis && tdnf clean all
 
-RUN tdnf -y update glibc glibc-libs glibc-i18n \
-    && tdnf clean all
+RUN tdnf -y update glibc glibc-libs
