--- a/make/photon/trivy-adapter/Dockerfile.base
+++ b/make/photon/trivy-adapter/Dockerfile.base
@@ -5,5 +5,4 @@ RUN tdnf install -y rpm shadow >> /dev/null \
     && groupadd -r -g 10000 scanner \
     && useradd --no-log-init -m -r -g 10000 -u 10000 scanner
 
-RUN tdnf -y update glibc glibc-libs glibc-i18n \
-    && tdnf clean all
+RUN tdnf -y update glibc glibc-libs
